--- a/jessica-editor-style.css
+++ b/jessica-editor-style.css
@@ -1,10 +1,10 @@
 /*---------------------------------------------------------------------------------
 
-	Editor styles for Hemingway
+	Editor styles for jessica
 
 ---------------------------------------------------------------------------------*/
 
-body#tinymce.wp-editor { 
+body#tinymce.wp-editor {
     font-family: 'Lato', Helvetica, sans-serif;
     font-size: 16px;
 }
@@ -36,7 +36,7 @@ body#tinymce.wp-editor blockquote {
 	line-height: 150%;
 	color: #666;
 	background: #EEE;
-	font-family: 'Raleway', 'Helvetica Neue', sans-serif;
+	font-family: 'Lato', 'Helvetica Neue', sans-serif;
 }
 
 body#tinymce.wp-editor blockquote p:first-child { margin-top: 0; }
@@ -122,5 +122,3 @@ body#tinymce.wp-editor th {
 }
 
 body#tinymce.wp-editor table tbody > tr:nth-child(odd) > td { background: #f9f9f9; }
-
-
