--- a/style.css
+++ b/style.css
@@ -2,11 +2,10 @@
 
 	Theme Name: Jessica
 	Version: 1.47
-	Description: Based on Hemingway is a clean, beautiful and responsive two-column theme for bloggers. Features responsive design, retina-ready assets, full-width header image with parallax scrolling effect, custom accent color, custom logo upload, custom widgets (video, Flickr and Dribbble), page templates and translation-ready code. Included translations: Swedish/svenska.
-	Tags: black, dark, white, green, two-columns, fluid-layout, responsive-layout, custom-header, custom-menu, custom-colors, featured-images, flexible-header, post-formats, sticky-post, threaded-comments, translation-ready, editor-style
-	Author: Anders Norén
-	Author URI: http://www.andersnoren.se
-	Theme URI: http://www.andersnoren.se/teman/hemingway-wordpress-theme/
+	Description:
+	Author:
+	Author URI:
+	Theme URI:
 	License: GNU General Public License version 2.0
 	License URI: http://www.gnu.org/licenses/gpl-2.0.html
 
@@ -57,7 +56,11 @@ table {
 	border-spacing:0;
 }
 
-ol, ul { list-style:none; }
+ol, ul{ list-style:none; }
+.list-none {
+	list-style:none !important;
+	margin-left: 0;
+}
 
 blockquote:before,
 blockquote:after { content:""; }
@@ -89,7 +92,7 @@ body {
 	background: #FFF;
 	color: #444;
 	font-family: 'Lato', sans-serif;
-	font-size: 18px;
+	font-size: 16px;
 	-webkit-font-smoothing: subpixel-antialiased;
 }
 
@@ -253,17 +256,19 @@ a.more-link,
 .blog-info {
 	display: inline-block;
 	padding: 30px;
-	background: #1d1d1d;
+	background: #fff;
+	color: #111;
+	box-shadow: 0 1px 3px rgba(0, 0, 0, .25);
 }
 
 .blog-title {
 	width: 100%;
 	text-align: center;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Lato', sans-serif;
 }
 
 .blog-title a {
-	color: #FFF;
+	color: #111;
 	text-transform: uppercase;
 	letter-spacing: 4px;
 	font-weight: 700;
@@ -280,7 +285,7 @@ a.more-link,
 }
 
 .blog-description {
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Lato', sans-serif;
 	text-align: center;
 	color: rgba(255,255,255,0.4);
 	font-weight: 300;
@@ -299,33 +304,50 @@ a.more-link,
 .blog-menu li { position: relative; }
 .blog-menu > li { float: left; }
 
-.blog-menu > li:before {
-	content: "/";
-	display: block;
-	position: absolute;
-	left: 0;
-	top: 50%;
-	margin-top: -9px;
-	margin-left: -3px;
-	font-size: 16px;
-	color: #444;
-	font-weight: 300;
-	z-index: 1000;
+.blog-menu .menu-item:nth-child(1):after{
+	border-bottom-left-radius: 3px;
+}
+.blog-menu .menu-item:nth-child(5):after{
+	border-bottom-right-radius: 3px;
 }
 
-.blog-menu > li:first-child:before { content: none; }
-
 .blog-menu a {
+	position: relative;
 	display: block;
 	padding: 27px 20px;
 	text-transform: uppercase;
 	letter-spacing: 1px;
-	color: rgba(255,255,255,0.4);
+	color: rgba(255,255,255,1);
 	font-size: 13px;
 }
-
-.blog-menu a:hover,
-.blog-menu .current-menu-item a { color: #FFF; }
+.menu-item a{
+	position: relative;
+	display: block;
+	z-index: 15;
+}
+.menu-item{
+	position: relative;
+}
+.menu-item:after,
+.menu-item:before{
+	content: "";
+	display: block;
+	height: 100%;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	position: absolute;
+	z-index: 5;
+	transition: height .35s ease, background .35s ease;
+}
+.blog-menu .menu-item:hover:before,
+.blog-menu .menu-item:hover:after, .blog-menu .menu-item.current-menu-item:after{
+	height: 110%;
+}
+.blog-menu .menu-item:hover:before{
+	z-index: 10;
+	background: rgba(0, 0, 0, 0.1);
+}
 
 .blog-menu > .has-children a,
 .blog-menu > .page_item_has_children a { padding-right: 35px; }
@@ -335,7 +357,7 @@ a.more-link,
 	content: "";
 	display: block;
 	border: 5px solid transparent;
-	border-top-color: rgba(255,255,255,0.4);
+	border-top-color: rgba(255,255,255,1);
 	position: absolute;
 	z-index: 1001;
 	right: 17px;
@@ -347,12 +369,10 @@ a.more-link,
 .blog-menu > .page_item_has_children:hover::after { border-top-color: #FFF; }
 
 .blog-menu li:hover a {
-	background-color: #1D1D1D;
 	cursor: pointer;
 }
 
 .blog-menu li:hover > a { color: #FFF; }
-
 
 /* Sub menus --------------------------------------- */
 
@@ -436,7 +456,62 @@ a.more-link,
 .post:last-child,
 .page:last-child { padding-bottom: 0; border-bottom: 0; margin-bottom: 0; }
 
+/* Cards --------------------------------------- */
 
+.card{
+	float: left;
+	width: 49%;
+	margin-right: 2%;
+	background: #ffffff;
+	color: #444;
+	border-radius: 3px;
+	box-shadow: 0 1px 3px rgba(0, 0, 0, .25);
+	display: block;
+	position: relative;
+	overflow: hidden;
+}
+a.card:hover{
+	color: #444;
+}
+a.card:hover, a.card .card-image:hover, a.card p:hover, a.card h3:hover{
+	cursor: pointer
+}
+.card:nth-child(2n){
+	margin-right: 0;
+}
+.card-image{
+	width: 100%;
+	height: 200px;
+	display: block;
+	overflow: hidden;
+	background-size: cover;
+}
+/*.card-image img{
+	min-width: 100%;
+	min-height: auto;
+}*/
+.card h3{
+	font-size: 22px;
+	font-weight: 700;
+	padding: 20px
+}
+.card p{
+	padding: 0 20px 20px 20px;
+	line-height: 22px;
+}
+.read-more{
+	text-align: right;
+	padding: 10px 0;
+	width: 100%;
+	display: block;
+	float: right;
+}
+.read-more .text{
+	text-decoration: underline;
+}
+.read-more:after{
+	content: "→";
+}
 /* Featured media --------------------------------------- */
 
 
@@ -504,7 +579,7 @@ a.more-link,
 .post-header { margin-bottom: 6%; }
 
 .post-title {
-	font-size: 2.5em;
+	font-size: 22px;
 	font-weight: 700;
 	line-height: 120%;
 	margin-bottom: 15px;
@@ -535,15 +610,15 @@ a.more-link,
 
 .post-content a.more-link {
 	display: inline-block;
-	background: #262626;
-	padding: 10px 18px;
-	color: #FFF;
+	border: 2px solid #262626;
+	padding: 5px 18px;
+	color: #262626;
 	font-size: 0.85em;
 	border-radius: 4px;
 }
 
 .post-content a.more-link:hover {
-	background: #1abc9c;
+	border: 2px solid transparent;
 	color: #FFF;
 	text-decoration: none !important;
 }
@@ -605,7 +680,7 @@ a.more-link,
 	display: block;
 	text-align: center;
 	color: rgba(255,255,255,0.75);
-	font-size: 1rem;
+	font-size: 1.5rem;
 	font-weight: 400;
 }
 
@@ -634,7 +709,6 @@ a.more-link,
 	font-weight: 400;
 	color: #999;
 	line-height: 120%;
-	padding-left: 36px;
 }
 
 .category-icon,
@@ -791,20 +865,24 @@ a.post-nav-newer { float: right; text-align: right; }
 .post-content *:last-child { margin-bottom: 0; }
 
 .post-content h1, .post-content h2, .post-content h3, .post-content h4, .post-content h5, .post-content h6 {
-	margin: 50px 0 20px;
+	margin: 10px 0 20px;
 	color: #444;
 	line-height: 120%;
 }
 
-.post-content h1 { font-size: 2em; font-weight: 700; }
+#wgmpmap{
+	margin-bottom: 30px;
+}
 
-.post-content h2 { font-size: 1.75em; font-weight: 700; }
+.post-content h1 { font-size: 1.5em; font-weight: 700; }
 
-.post-content h3 { font-size: 1.5em; font-weight: 700; }
+.post-content h2 { font-size: 1.35em; font-weight: 700; }
 
-.post-content h4 { font-size: 1.25em; }
+.post-content h3 { font-size: 1.15em; font-weight: 700; }
 
-.post-content h5 { font-size: 1.1em; }
+.post-content h4 { font-size: 1em; }
+
+.post-content h5 { font-size: 1em; }
 
 .post-content h6 {
 	font-size: 0.9em;
@@ -823,13 +901,24 @@ a.post-nav-newer { float: right; text-align: right; }
 }
 
 .post-content blockquote {
+	position: relative;
 	padding: 1.1em;
-	line-height: 150%;
-	color: #666;
-	background: #EEE;
-	font-family: 'Raleway', 'Helvetica Neue', sans-serif;
+	padding-left: 50px;
+	line-height: 130%;
+	color: rgba(0,0,0,0.6);
+	background: rgba(255, 165, 86,0.2);
+	font-family: 'Lato', 'Helvetica Neue', sans-serif;
+	border-radius: 5px;
 }
-
+.post-content blockquote:before{
+	position: absolute;
+	content: "“";
+	font-family: 'Georgia', serif;
+	font-size: 160px;
+	color: rgb(255, 255, 255);
+	left: -15px;
+	top: 60px;
+}
 .post-content cite {
 	font-weight: 700;
 	letter-spacing: 1px;
@@ -890,10 +979,22 @@ code, kbd, pre {
 	margin: 2em auto;
 	border: 0;
 }
-
+.post-content .sandwich hr{
+	width: 100%;
+	height: 2px;
+	background: #EEE;
+	margin: 2em auto;
+	border: 0;
+}
+.post-content .sandwich hr:first-child{
+	margin-top: 0;
+}
 .post-content ul {
 	list-style: disc;
 	margin-left: 1.5em;
+}
+.post-content ul.list-none{
+	margin-left: 0;
 }
 
 .post-content ul ul { list-style: circle; }
@@ -942,7 +1043,40 @@ code, kbd, pre {
 	background: #f1f1f1;
 }
 
+.category-header{
+	border-radius: 3px;
+	padding: 20px;
+	color: rgba(0, 0, 0, 0.6);
+	margin-bottom: 50px;
+}
+.category-title{
+	font-size: 1.5rem;
+	font-weight: 700;
+	margin-bottom: 10px;
+}
+.category-description{
+	margin-bottom: 10px;
+}
 
+.post-content .display-posts-listing{
+	margin-left: 0;
+}
+
+.display-posts-listing .listing-item{
+	list-style: none;
+}
+.topic-keyword{
+	display: inline-block;
+	padding: 5px 10px;
+	border-radius: 3px;
+	margin-right: 5px;
+	color: rgb(255, 255, 255);
+}
+.post-content .list-no-bullets{
+	list-style: none !important;
+	margin-left: 0;
+	margin-top: 10px;
+}
 /* Post media --------------------------------------- */
 
 
@@ -956,7 +1090,9 @@ img.alignright,
 	padding: 5px;
 	border: 1px solid #EEE;
 }
-
+img.margin-top-20{
+	margin-top: 20px;
+}
 
 .post-content .alignleft,
 .post-content .alignright {
@@ -1583,9 +1719,9 @@ p.form-allowed-tags {
 
 
 .widget {
-	padding-bottom: 15%;
-	border-bottom: 4px solid #EEE;
-	margin-bottom: 15%;
+	padding-bottom: 10px;
+	border-bottom: 1px solid #EEE;
+	margin-bottom: 5%;
 }
 
 .widget:last-child {
@@ -1595,12 +1731,12 @@ p.form-allowed-tags {
 }
 
 .widget-title {
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 0.9rem;
 	text-transform: uppercase;
 	font-weight: 700;
 	margin-bottom: 20px;
-	color: #444;
+	color: rgba(0, 0, 0, 0.5);
 }
 
 /* widget-content */
@@ -1767,46 +1903,6 @@ p.form-allowed-tags {
 	color: #FFF;
 }
 
-
-/* Widget Flickr --------------------------------------- */
-
-
-.flickr_badge_image {
-	width: 30%;
-	margin-bottom: 5%;
-	margin-left: 5%;
-	overflow: hidden;
-	float: left;
-	line-height: 0;
-}
-
-#flickr_badge_image1,
-#flickr_badge_image4,
-#flickr_badge_image7,
-#flickr_badge_image10,
-#flickr_badge_image13,
-#flickr_badge_image16,
-#flickr_badge_image19,
-#flickr_badge_image22,
-#flickr_badge_image25 {
-	margin-left: 0;
-}
-
-.flickr_badge_image img {
-	display: block;
-	padding: 5px;
-	background: #EEE;
-}
-
-.flickr_badge_image a:hover img { background: #1abc9c; }
-
-.widgetmore a {
-	display: block;
-	clear: both;
-	padding: 0.5em 0;
-}
-
-
 /* -------------------------------------------------------------------------------- */
 /*	12. Footer
 /* -------------------------------------------------------------------------------- */
@@ -1817,6 +1913,15 @@ p.form-allowed-tags {
 	margin-top: 7.5%;
 }
 
+#menu-footer .menu-item{
+	float: left;
+	padding: 22px 10px 18px;
+	border-top: 0;
+}
+#menu-footer .menu-item:after{
+	display: none;
+}
+
 .column {
 	width: 30%;
 	margin-left: 5%;
@@ -1824,10 +1929,6 @@ p.form-allowed-tags {
 
 .column:first-child { margin-left: 0; }
 
-.column-3 {
-	width: 100%;
-	margin-left: 0;
-}
 .column-3 .menu{
 	display: flex;
 }
@@ -1838,9 +1939,24 @@ p.form-allowed-tags {
 /* Footer widgets --------------------------------------- */
 
 
-.footer .widget { border-bottom-color: rgba(255,255,255,0.1) }
+.footer-widget {
+	background: #fff;
+	padding: 10px;
+	border-radius: 3px;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+}
 
-.footer .widget-title { color: #EEE; letter-spacing: 1px; font-weight: 600; }
+.footer .widget{
+	/*border-bottom: 1px solid rgba(0, 0, 0,0.35);*/
+}
+
+.footer .widget-title {
+	color: rgba(0, 0, 0, 0.3);
+	letter-spacing: 1px;
+	font-weight: 600;
+	margin-bottom: 10px;
+	line-height: 130%;
+}
 
 .footer .widget-content { color: #666; }
 
@@ -1883,13 +1999,26 @@ p.form-allowed-tags {
 /* -------------------------------------------------------------------------------- */
 /*	13. Credits
 /* -------------------------------------------------------------------------------- */
+.credits{
+	box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.25);
+	background: #ffffff;
+}
 
-
+.credit-by-field{
+	color: #fff;
+	background: #1abc9c;
+	padding: 34px 15px 24px;
+	margin-top: -10px;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+}
+.credits .credit-by-field a{
+	color: #fff;
+}
 .credits.no-padding { font-size: 0.8rem; }
 
 .credits-inner {
-	padding: 25px 0 4%;
-	border-top: 2px solid rgba(255,255,255,0.1);
+	padding: 0 2%;
 	text-transform: uppercase;
 	letter-spacing: 1px;
 }
@@ -1956,17 +2085,23 @@ img#wpstats { display: none; }
 		display: inline-block;
 		position: relative;
 		height: 57px;
-		width: 32px;
 		padding: 20px 0px;
 	}
 
 	.toggle:hover { cursor: pointer; }
 
-	.nav-toggle { float: left; margin-left: 7%; }
-	.search-toggle { float: right; margin-right: 7%; }
+	.nav-toggle { float: left; margin-left: 24px; }
+	.search-toggle {
+		float: right;
+		margin-right: 3%;
+		width: 32px;
+	}
 
 	.nav-toggle:hover { cursor: pointer; }
 
+	.nav-toggle .bars{
+		float: left;
+	}
 	.nav-toggle .bar {
 		display: block;
 		width: 24px;
@@ -1974,10 +2109,21 @@ img#wpstats { display: none; }
 		margin-top: 4px;
 		background: #666;
 	}
+	.nav-toggle .mobile-menu-label{
+		height: 100%;
+		font-size: 20px;
+		line-height: 100%;
+		margin-left: 7px;
+		float: left;
+		margin-top: -1px;
+		text-transform: uppercase;
+		color:  #666;
+	}
 
 	.nav-toggle .bar:first-child { margin-top: 0; }
 
 	.nav-toggle.active .bar { background-color: #FFF; }
+	.nav-toggle.active .mobile-menu-label { color: #FFF; }
 
 	.search-toggle .metal,
 	.search-toggle .glass,
@@ -2026,16 +2172,21 @@ img#wpstats { display: none; }
 	.mobile-menu a {
 		display: block;
 		padding: 24px;
-		font-size: 12px;
+		font-size: 16px;
 		border-bottom: 1px solid rgba(255,255,255,0.1);
-		background: #282828;
 		display: block;
 		text-transform: uppercase;
 		letter-spacing: 1px;
-		color: rgba(255,255,255,0.4);
-		font-size: 13px;
+		color: rgba(255,255,255,0.5);
 	}
-
+	.mobile-menu .menu-item{
+		background: #fff;
+	}
+	.mobile-menu .menu-item:after{
+		opacity: 0.8;
+	}
+	.mobile-menu:hover:after,
+	.mobile-menu .current-menu-item:after { opacity: 1; }
 	.mobile-menu a:hover,
 	.mobile-menu .current-menu-item a { color: #FFF; }
 
@@ -2204,40 +2355,50 @@ img#wpstats { display: none; }
 
 	/* Footer --------------------------------------- */
 
-	.footer { margin-top: 60px; }
+	.footer { margin-top: 40px; }
 
 	.footer .column {
 		width: 100%;
 		margin-left: 0;
-		padding-top: 40px;
 		border-top: 4px solid rgba(255,255,255,0.1);
 		margin-top: 40px;
 	}
 
-	.footer .column:first-child { margin-top: 0; border-top: 0; padding-top: 0; }
+	.footer .column:first-child { margin-top: 0; border-top: 0;}
 
-
-
-	.widget {
-		margin-bottom: 40px;
-		border-bottom: 4px solid rgba(255,255,255,0.1);
-		padding-bottom: 40px;
+	#menu-footer .menu-item{
+		width: 100%;
+		text-align: center;
+		border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+		background: #fff;
 	}
+
 
 	/* Credits --------------------------------------- */
 
 	.credits.section { border-top: 1px solid rgba(255,255,255,0.1); }
 
-	.credits-inner {
-		padding: 30px 0;
-		border-top: 0;
+	.credits-inner{
 		text-align: center;
+		padding: 0px;
+		max-width: 100%;
+	}
+
+	.credit-by-field{
+		padding: 24px 0 24px;
+		width: 100%;
+		margin-top: -1px;
+		border-top-left-radius: 0;
+		border-top-right-radius: 0;
+		font-size: 16px;
 	}
 
 	.credits p { float: none; display: inline; }
 
-	.credits .right,
-	.credits span { display: none; }
+	.credits .right{
+		float: left;
+		width: 100%;
+	}
 
 }
 
@@ -2252,7 +2413,7 @@ img#wpstats { display: none; }
 
 	/* Post --------------------------------------- */
 
-	.post-title { font-size: 1.75em; }
+	.post-title {  }
 
 	.post-author { display: none; }
 	.post-header .date-sep:nth-of-type(2) { display: none; }
@@ -2304,7 +2465,7 @@ img#wpstats { display: none; }
 	.blog .format-quote .post-content blockquote,
 	.archive .format-quote .post-content blockquote,
 	.search .format-quote .post-content blockquote {
-		font-size: 1em;
+		font-size: 1.5em;
 	}
 
 	.blog .format-quote .post-content blockquote cite,
@@ -2331,7 +2492,9 @@ img#wpstats { display: none; }
 
 	/* Footer --------------------------------------- */
 
-	.footer { margin-top: 40px; }
+	.footer-inner{
+		max-width: 94%;
+	}
 
 
 }
